--- a/css/index.html
+++ b/css/index.html
@@ -2,7 +2,7 @@
 <head>
 <script>
 window.location.replace("../");
-window.location.href = "../");
+window.location.href = "../";
 
 </script>
 <body>
