beacon and android stuff very many

--- a/download/index.html
+++ b/download/index.html
@@ -1,1 +1,6 @@
-<h1>asdasdasdad</h1>
+<!doctype html>
+<head>
+<title>Beacon</title>
+<meta name="description" content="This is content">
+</head>
+<h1>Hello</h1>
